--- a/v105/Makefile
+++ b/v105/Makefile
@@ -1,14 +1,14 @@
 all: build/v105.pdf
 
 # hier Python-Skripte:
-build/plot.pdf: plot.py ../matplotlibrc ../header-matplotlib.tex | build
+build/plot1.pdf build/plot2.pdf: plot.py ../matplotlibrc ../header-matplotlib.tex | build
 	# so that matplotlib can find the tex header when running
 	# LaTeX in the tmp directory
 	# and set the matplotlibrc
 	TEXINPUTS=$$(pwd)/..: MATPLOTLIBRC=../matplotlibrc python plot.py
 
 # hier weitere Abhängigkeiten für build/v105.pdf deklarieren:
-build/v105.pdf: build/plot.pdf
+build/v105.pdf: build/plot1.pdf build/plot2.pdf
 
 build/v105.pdf: FORCE | build
 	# to find header and bib files in the main directory
