--- a/v106/Makefile
+++ b/v106/Makefile
@@ -1,14 +1,14 @@
 all: build/v106.pdf
 
 # hier Python-Skripte:
-build/plot.pdf: plot.py ../matplotlibrc ../header-matplotlib.tex | build
-	# so that matplotlib can find the tex header when running
-	# LaTeX in the tmp directory
-	# and set the matplotlibrc
-	TEXINPUTS=$$(pwd)/..: MATPLOTLIBRC=../matplotlibrc python plot.py
+#build/plot.pdf: plot.py ../matplotlibrc ../header-matplotlib.tex | build
+#	# so that matplotlib can find the tex header when running
+#	# LaTeX in the tmp directory
+#	# and set the matplotlibrc
+#	TEXINPUTS=$$(pwd)/..: MATPLOTLIBRC=../matplotlibrc python plot.py
 
 # hier weitere Abhängigkeiten für build/v106.pdf deklarieren:
-build/v106.pdf: build/plot.pdf
+#build/v106.pdf: build/plot.pdf
 
 build/v106.pdf: FORCE | build
 	# to find header and bib files in the main directory
