Einige Dinge gemacht um mich vor der Theorie zu drücken

--- a/v308/Makefile
+++ b/v308/Makefile
@@ -1,14 +1,14 @@
 all: build/v308.pdf
 
 # hier Python-Skripte:
-build/plot.pdf: plot.py ../matplotlibrc ../header-matplotlib.tex | build
+build/plotHysterese.pdf build/plotHelmHoltz1.pdf build/plotHelmHoltz2.pdf build/plotHelmHoltz3.pdf build/plotLangeSpule.pdf: plot.py ../matplotlibrc ../header-matplotlib.tex | build
 	# so that matplotlib can find the tex header when running
 	# LaTeX in the tmp directory
 	# and set the matplotlibrc
 	TEXINPUTS=$$(pwd)/..: MATPLOTLIBRC=../matplotlibrc python plot.py
 
 # hier weitere Abhängigkeiten für build/v308.pdf deklarieren:
-build/v308.pdf: build/plot.pdf
+build/v308.pdf: build/plotHysterese.pdf build/plotHelmHoltz1.pdf build/plotHelmHoltz2.pdf build/plotHelmHoltz3.pdf build/plotLangeSpule.pdf
 
 build/v308.pdf: FORCE | build
 	# to find header and bib files in the main directory
