--- a/v106/Makefile
+++ b/v106/Makefile
@@ -21,6 +21,7 @@ build/v106.pdf: FORCE | build
 	  --interaction=nonstopmode \
 	  --halt-on-error \
 	v106.tex
+	cp build/v106.pdf .
 
 build:
 	mkdir -p build
