--- a/v355/Makefile
+++ b/v355/Makefile
@@ -11,6 +11,7 @@ build/v355.pdf: FORCE | build
 	  --interaction=nonstopmode \
 	  --halt-on-error \
 	v355.tex
+	cp  build/v355.pdf .
 
 build:
 	mkdir -p build
