--- a/vXXX/Makefile
+++ b/vXXX/Makefile
@@ -21,6 +21,7 @@ build/vXXX.pdf: FORCE | build
 	  --interaction=nonstopmode \
 	  --halt-on-error \
 	vXXX.tex
+	cp build/vXXX.pdf .
 
 build:
 	mkdir -p build
