--- a/v354/Makefile
+++ b/v354/Makefile
@@ -21,6 +21,7 @@ build/v354.pdf: FORCE | build
 	  --interaction=nonstopmode \
 	  --halt-on-error \
 	v354.tex
+	cp build/v354.pdf .
 
 build:
 	mkdir -p build
