--- a/v203/Makefile
+++ b/v203/Makefile
@@ -1,14 +1,14 @@
 all: build/v203.pdf
 
 # hier Python-Skripte:
-build/plot1.pdf build/plot2.pdf: plot.py ../matplotlibrc ../header-matplotlib.tex | build
+build/plot1.pdf build/plot2.pdf build/plot3.pdf build/plot4.pdf: plot.py ../matplotlibrc ../header-matplotlib.tex | build
 	# so that matplotlib can find the tex header when running
 	# LaTeX in the tmp directory
 	# and set the matplotlibrc
 	TEXINPUTS=$$(pwd)/..: MATPLOTLIBRC=../matplotlibrc python plot.py
 
 # hier weitere Abhängigkeiten für build/v203.pdf deklarieren:
-build/v203.pdf: build/plot1.pdf build/plot2.pdf
+build/v203.pdf: build/plot1.pdf build/plot2.pdf build/plot3.pdf build/plot4.pdf
 
 build/v203.pdf: FORCE | build
 	# to find header and bib files in the main directory
